# advent-of-code-2025

./: CMakeLists.txt  README.md  new_day.sh
inputs/: day03.txt  day05.txt
src/day01/: day01-part2.c  day01.c
src/day02/: day02-part2.c  day02.c
src/day03/: day03-part2.c  day03.c
src/day04/: day04-part2.c  day04.c
src/day05/: day05-part2.c  day05.c
